Clean up + test preparation

--- a/tests/config.neon
+++ b/tests/config.neon
@@ -1,7 +1,6 @@
-parameters:
-
 extensions:
-	- Doublemcz\NetteDoctrineOdm\DI\GeneratorExtension
+	- Doublemcz\NetteDoctrineOdm\DI\OdmExtension
 
-doctrineOdm:
-	database: 'nette-doctrine-odm'
+parameters:
+	doctrineOdm:
+		database: 'nette-doctrine-odm'
