--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
         "kdyby/console": "^2.6.0"
     },
     "require-dev": {
-        "nette/tester": "^1.7"
+        "nette/tester": "^1.7",
+        "nette/bootstrap": "^2.4",
+        "tracy/tracy": "^2.4"
     },
 	 "autoload" : {
 		"classmap" : ["src/"]
