--- a/composer.json
+++ b/composer.json
@@ -1,26 +1,29 @@
 {
-    "name": "doublemcz/nette-doctrie-odm",
-    "type": "library",
-    "require": {
-		"php": ">=7.0.0",
-		"alcaeus/mongo-php-adapter": "^1.0",
-        "mongodb/mongodb": "^1.0",
-		"doctrine/mongodb-odm": "^1.1",
-        "nette/di": "^2.3.0",
-        "kdyby/console": "^2.6.0"
-    },
-    "require-dev": {
-        "nette/tester": "^1.7",
-        "nette/bootstrap": "^2.4",
-        "tracy/tracy": "^2.4"
-    },
-	 "autoload" : {
-		"classmap" : ["src/"]
-	},
-    "authors": [
-        {
-            "name": "Martin Mika",
-            "email": "mail@martinmika.eu"
-        }
+  "name": "doublemcz/nette-doctrie-odm",
+  "type": "library",
+  "license": "MIT",
+  "require": {
+    "php": ">=7.0.0",
+    "alcaeus/mongo-php-adapter": "^1.0",
+    "mongodb/mongodb": "^1.0",
+    "doctrine/mongodb-odm": "^1.1",
+    "nette/di": "^2.3.0",
+    "kdyby/console": "^2.6.0"
+  },
+  "require-dev": {
+    "nette/tester": "^1.7",
+    "nette/bootstrap": "^2.4",
+    "tracy/tracy": "^2.4"
+  },
+  "autoload": {
+    "classmap": [
+      "src/"
     ]
+  },
+  "authors": [
+    {
+      "name": "Martin Mika",
+      "email": "mail@martinmika.eu"
+    }
+  ]
 }
